--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,19 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #F28123,
+  secondary:  rgb(226, 120, 33),
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #ffffff,
   dark:       #222
 );
 
+// Top Toolbar
+$toolbar-md-background: color($colors,secondary);
+
+// Bottons bootom
+$tabs-md-background: color($colors,secondary);
+$tabs-md-tab-color-active: color($colors, light);
 
 // App iOS Variables
 // --------------------------------------------------
