Added page to add new alert

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,9 +35,9 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #F28123,
-  secondary:  rgb(226, 120, 33),
+  secondary:  #F77600,
   danger:     #f53d3d,
-  light:      #ffffff,
+  light:      #FFFFFA,
   dark:       #222
 );
 
