--- a/src/pages/new-alert/new-alert.scss
+++ b/src/pages/new-alert/new-alert.scss
@@ -1,3 +1,16 @@
-page-new-alert {
-
+.ios, .md {
+ 
+    page-new-alert {
+ 
+      .scroll {
+        height: 100%
+      }
+ 
+      #map {
+        width: 100%;
+        height: 300px;
+      }
+ 
+    }
+ 
 }
