--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -37,7 +37,7 @@ ion-list,ion-card{
     -moz-box-shadow: 1px 1px 4px 0px rgba(242,129,35,0.75)  inset;
     -webkit-box-shadow: 1px 1px 4px 0px rgba(242,129,35,0.75)  inset;
   }
-  .avatar-disable{
+  .avatarDisabled{
     border: 3px solid rgba(75, 67, 59, 0.8);
     box-shadow: 1px 1px 4px 0px rgba(242,129,35,0.75) inset;
     -moz-box-shadow: 1px 1px 4px 0px rgba(242,129,35,0.75)  inset;
